feat (swagger): implements users api methods
